Alterado o encode da aplicação para UTF-8

--- a/PSS/PSS/Web.config
+++ b/PSS/PSS/Web.config
@@ -15,7 +15,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
   </appSettings>
   <system.web>
-    <globalization culture="pt-BR" uiCulture="pt-BR" />
+    <globalization culture="pt-BR" uiCulture="pt-BR" fileEncoding="utf-8" requestEncoding="utf-8" responseEncoding="utf-8" />
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
     <httpModules>
