--- a/PSS/PSS/PSS.csproj
+++ b/PSS/PSS/PSS.csproj
@@ -241,6 +241,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Attributes\Validation\CEPAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\CPFAttribute.cs" />
     <Compile Include="Utils\Constants\General.cs" />
     <Compile Include="Utils\Constants\View.cs" />
