--- a/PSS/PSS/PSS.csproj
+++ b/PSS/PSS/PSS.csproj
@@ -246,8 +246,7 @@
     <Compile Include="Utils\Attributes\Validation\CPFAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\DateAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\PhoneAttribute.cs" />
-    <Compile Include="Utils\Constants\General.cs" />
-    <Compile Include="Utils\Constants\View.cs" />
+    <Compile Include="Utils\Constants.cs" />
     <Compile Include="Utils\Global.cs" />
     <Compile Include="Utils\OrderControllerFactory.cs" />
   </ItemGroup>
