--- a/PSS/PSS/PSS.csproj
+++ b/PSS/PSS/PSS.csproj
@@ -197,10 +197,10 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Context\Configuration\PurchaseOrderConfiguration.cs" />
-    <Compile Include="Context\Configuration\PurchaseOrderFreightConfiguration.cs" />
-    <Compile Include="Context\Configuration\SaleOrderConfiguration.cs" />
-    <Compile Include="Context\Configuration\SaleOrderFreightConfiguration.cs" />
+    <Compile Include="Configuration\PurchaseOrderConfiguration.cs" />
+    <Compile Include="Configuration\PurchaseOrderFreightConfiguration.cs" />
+    <Compile Include="Configuration\SaleOrderConfiguration.cs" />
+    <Compile Include="Configuration\SaleOrderFreightConfiguration.cs" />
     <Compile Include="Context\Context.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoriesController.cs" />
@@ -245,6 +245,7 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\KeyGenerator.cs" />
     <Compile Include="Utils\Attributes\Validation\CEPAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\CNPJAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\CPFAttribute.cs" />
