--- a/PSS/PSS/PSS.csproj
+++ b/PSS/PSS/PSS.csproj
@@ -247,13 +247,13 @@
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\KeyGenerator.cs" />
     <Compile Include="Utils\Attributes\Validation\CEPAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\CNPJAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\CPFAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\DateAttribute.cs" />
     <Compile Include="Utils\Attributes\Validation\PhoneAttribute.cs" />
     <Compile Include="Utils\Constants.cs" />
+    <Compile Include="Utils\Extensions\DbEntityEntryExtension.cs" />
     <Compile Include="Utils\Extensions\EnumExtension.cs" />
     <Compile Include="Utils\Global.cs" />
     <Compile Include="Utils\OrderControllerFactory.cs" />
